# GrafikaGL

./: .gitignore  CMakeLists.txt  Makefile  README.md
final/Rubik/src/: Main.cpp  ew.cpp
minggu1/: program1.c  program2.c
w1/: CMakeLists.txt
w1/Gradation Triangle/: CMakeLists.txt
w1/Gradation Triangle/src/: GradationTriangle.cpp
w1/Plain Triangle/: CMakeLists.txt  Makefile.bat
w1/Plain Triangle/src/: PlainTriangle.cpp
w2/: CMakeLists.txt
w2/Cube/: CMakeLists.txt
w2/Cube/src/: Cube.cpp
w2/Sierpenski Point/: CMakeLists.txt
w2/Sierpenski Point/src/: SierpenskiPoint.cpp
w2/Sierpenski Triangle/: CMakeLists.txt
w2/Sierpenski Triangle/src/: SierpenskiTriangle.cpp
w2/Sierpenski point/src/: SierpenskiPoint.cpp
w2/Sierpenski triangle/src/: SierpenskiTriangle.cpp
w2/Sierpinski Point/src/: SierpenskiPoint.cpp
w2/Sierpinski Triangle/src/: SierpenskiTriangle.cpp
w3/Rubik/: Cube.hpp  Rubik.cpp
w3/Rubik/src/: Cube.hpp  Main.cpp
w4/Rubik/src/: Main.cpp
